# DDB-skills

./: .gitignore  README.md  pyproject.toml
codex-vscode-proxy-setup/: SKILL.md
confluence-cloud-editor/: .env.example  SKILL.md  Shark-Q2-需求计划.md  产品单页-Shark异构平台-草稿.md
confluence-cloud-editor/scripts/: confluence_api.py
csap/: SKILL.md
csap/reference/: AShare_Parameter_Delivery.csv  AShare_Table_Delivery.csv  CSAPDataSimulation.dos  CSAPFactors.dos  CSAPPrepare.dos  generate_mapping.py  parameter.csv  test_single_factor.py
data_pricing/: FICC tools.dos  create_db_tb.dos  download.py  parseinstrument.dos  testgetfutuctd.py
ddb-cross-node-sync/: SKILL.md
ddb-data-analysis/: SKILL.md
ddb-data-discovery/: SKILL.md
ddb-deployment-skill/: SKILL.md
ddb-rag/: SKILL.md
ddb-visualization/: SKILL.md
ddb_skills.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deploy-ddb-server/: check_log.py  debug_ddb.py  deploy.sh  deploy_ddb.py  deploy_fixed.py  run_deploy.py  test_ssh.py
develop-skills/: SKILL.md
document-translation/: SKILL.md  pdf_docx.py  pdf_translate_fallback.py  translate_docx.py
execute-dlang/: SKILL.md
ficc_curve_fitting_import/: SKILL.md
ficc_download_data/: SKILL.md
ficc_instru_maket_modeling/: SKILL.md
ficc_pricing/: README.md  SKILL.md
mihomo_onoff/: README.md  SKILL.md  skill.yaml
pdf/: SKILL.md
prepare_data_for_pricing/: SKILL.md
pricing/: SKILL.md
research-ddb/: SKILL.md
swordfish-smoke-test/: SKILL.md
tushare-data-import-ddb/: SKILL.md
tushare-ddb/: SKILL.md  _common.dos
(+212 files in other folders)
